fix: cursor styles

--- a/src/app/shared/components/dog-card/dog-card.component.scss
+++ b/src/app/shared/components/dog-card/dog-card.component.scss
@@ -39,6 +39,7 @@
   width: 100%;
   max-width: 300px;
   margin: 1rem;
+  cursor: pointer;
   transition: transform 0.2s ease-in-out;
 
   &:hover {
